--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^17.0.4",
     "@types/react-dom": "^17.0.0",
     "axios": "^0.21.1",
+    "bootstrap": "^5.0.1",
     "date-fns": "^2.21.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
